syntax = "proto3";
package configmodule.v1;

import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/gjermundgaraba/interchain-attestation/configmodule/types";

message Attestator {
  bytes attestator_id = 1;

  google.protobuf.Any public_key = 2
      [ (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey" ];

  google.protobuf.Any consensus_pubkey = 3
      [ (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey" ];
}